[gd_scene load_steps=14 format=3 uid="uid://c73jgxta38rfp"]

[ext_resource type="Script" path="res://menus/options/options.gd" id="1_kfknl"]
[ext_resource type="Theme" uid="uid://bv4urn83158ba" path="res://UI/theme/new_theme_outlined.tres" id="2_jh0ha"]
[ext_resource type="Script" path="res://menus/options/main.gd" id="3_1itm5"]
[ext_resource type="PackedScene" uid="uid://c5g77somkggcq" path="res://UI/buttons/dec.tscn" id="3_aymlg"]
[ext_resource type="PackedScene" uid="uid://ckvahyw454yty" path="res://menus/character_creator/custom_face.tscn" id="3_gloqi"]
[ext_resource type="PackedScene" uid="uid://b1ilbhdx0c8p2" path="res://UI/background/background_scroll.tscn" id="3_rdeqp"]
[ext_resource type="Script" path="res://menus/options/audio.gd" id="3_w0bh2"]
[ext_resource type="PackedScene" uid="uid://qt42tjjxi7ge" path="res://UI/background/window_bg.tscn" id="4_b2kv2"]
[ext_resource type="Script" path="res://menus/options/video.gd" id="4_lh087"]
[ext_resource type="PackedScene" uid="uid://cbjorljnfyjlt" path="res://UI/buttons/inc.tscn" id="4_mhakd"]
[ext_resource type="Script" path="res://menus/options/custom_face_selector.gd" id="8_gaijy"]
[ext_resource type="PackedScene" uid="uid://ogldl5edlenf" path="res://menus/options/player_input_settings.tscn" id="10_ccaiu"]
[ext_resource type="Script" path="res://menus/options/player_input_selector.gd" id="10_hl4et"]

[node name="Options" type="Node2D" node_paths=PackedStringArray("audio_panel", "video_panel", "custom_panel", "input_panel", "main_panel")]
script = ExtResource("1_kfknl")
audio_panel = NodePath("Control/Audio")
video_panel = NodePath("Control/Video")
custom_panel = NodePath("Control/CustomFaceSelector")
input_panel = NodePath("Control/PlayerInputSelector")
main_panel = NodePath("Control/Main")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(640, 360)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_jh0ha")
metadata/_edit_lock_ = true

[node name="Main" type="PanelContainer" parent="Control" node_paths=PackedStringArray("audio_button", "video_button", "custom_button", "save_button", "cancel_button", "input_button")]
layout_mode = 0
offset_left = 166.0
offset_top = 49.0
offset_right = 246.0
offset_bottom = 155.0
script = ExtResource("3_1itm5")
audio_button = NodePath("CenterContainer/VBoxContainer/Audio")
video_button = NodePath("CenterContainer/VBoxContainer/Video")
custom_button = NodePath("CenterContainer/VBoxContainer/Customize")
save_button = NodePath("CenterContainer/VBoxContainer/Save")
cancel_button = NodePath("CenterContainer/VBoxContainer/Cancel")
input_button = NodePath("CenterContainer/VBoxContainer/Input")
metadata/_edit_group_ = true

[node name="CenterContainer" type="CenterContainer" parent="Control/Main"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Main/CenterContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="Control/Main/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="Audio" type="Button" parent="Control/Main/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "AUDIO"

[node name="Video" type="Button" parent="Control/Main/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "VIDEO"

[node name="Customize" type="Button" parent="Control/Main/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "CUSTOM"

[node name="Input" type="Button" parent="Control/Main/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "INPUT"

[node name="Cancel" type="Button" parent="Control/Main/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "CANCEL"

[node name="Save" type="Button" parent="Control/Main/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "SAVE"

[node name="Spacer2" type="Control" parent="Control/Main/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="Audio" type="PanelContainer" parent="Control" node_paths=PackedStringArray("master_val", "master_slider", "music_val", "music_slider", "SFX_val", "SFX_slider")]
visible = false
layout_mode = 0
offset_left = 278.0
offset_top = 54.0
offset_right = 394.0
offset_bottom = 172.0
script = ExtResource("3_w0bh2")
master_val = NodePath("VBoxContainer/Master/Val")
master_slider = NodePath("VBoxContainer/MasterSlider")
music_val = NodePath("VBoxContainer/Music/Val")
music_slider = NodePath("VBoxContainer/MusicSlider")
SFX_val = NodePath("VBoxContainer/SFX/Val")
SFX_slider = NodePath("VBoxContainer/SFXSLider")
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Audio"]
layout_mode = 2

[node name="Master" type="Control" parent="Control/Audio/VBoxContainer"]
custom_minimum_size = Vector2(100, 12)
layout_mode = 2

[node name="Master" type="Label" parent="Control/Audio/VBoxContainer/Master"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -5.0
offset_right = 37.0
offset_bottom = 5.0
grow_vertical = 2
size_flags_horizontal = 4
text = "Master
"

[node name="Val" type="Label" parent="Control/Audio/VBoxContainer/Master"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -5.0
offset_bottom = 5.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 4
text = "50
"

[node name="MasterSlider" type="HSlider" parent="Control/Audio/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
value = 50.0

[node name="Music" type="Control" parent="Control/Audio/VBoxContainer"]
custom_minimum_size = Vector2(100, 12)
layout_mode = 2

[node name="Music" type="Label" parent="Control/Audio/VBoxContainer/Music"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -5.0
offset_right = 100.0
offset_bottom = 5.0
grow_vertical = 2
text = "Music"

[node name="Val" type="Label" parent="Control/Audio/VBoxContainer/Music"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -5.0
offset_bottom = 5.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 4
text = "50
"

[node name="MusicSlider" type="HSlider" parent="Control/Audio/VBoxContainer"]
layout_mode = 2
value = 50.0

[node name="SFX" type="Control" parent="Control/Audio/VBoxContainer"]
custom_minimum_size = Vector2(100, 12)
layout_mode = 2

[node name="SFX" type="Label" parent="Control/Audio/VBoxContainer/SFX"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -5.0
offset_right = 100.0
offset_bottom = 5.0
grow_vertical = 2
text = "SFX
"

[node name="Val" type="Label" parent="Control/Audio/VBoxContainer/SFX"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -5.0
offset_bottom = 5.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 4
text = "50
"

[node name="SFXSLider" type="HSlider" parent="Control/Audio/VBoxContainer"]
layout_mode = 2
value = 50.0
rounded = true

[node name="Result" type="Control" parent="Control/Audio/VBoxContainer"]
custom_minimum_size = Vector2(100, 18)
layout_mode = 2

[node name="Cancel" type="Button" parent="Control/Audio/VBoxContainer/Result"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -7.0
offset_right = 41.0
offset_bottom = 7.0
grow_vertical = 2
text = "Cancel"

[node name="Save" type="Button" parent="Control/Audio/VBoxContainer/Result"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -7.0
offset_bottom = 7.0
grow_horizontal = 0
grow_vertical = 2
text = "Save"

[node name="Video" type="PanelContainer" parent="Control" node_paths=PackedStringArray("res_label", "CRT_check")]
visible = false
layout_mode = 0
offset_left = 276.0
offset_top = 54.0
offset_right = 396.0
offset_bottom = 155.0
script = ExtResource("4_lh087")
res_label = NodePath("VBoxContainer/HBoxContainer/Label")
CRT_check = NodePath("VBoxContainer/HBoxContainer2/CheckBox")
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Video"]
layout_mode = 2

[node name="Resolution" type="Label" parent="Control/Video/VBoxContainer"]
layout_mode = 2
text = "Resolution"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Video/VBoxContainer"]
layout_mode = 2

[node name="Dec" parent="Control/Video/VBoxContainer/HBoxContainer" instance=ExtResource("3_aymlg")]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Video/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(62, 10)
layout_mode = 2
text = "6400x3600"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Inc" parent="Control/Video/VBoxContainer/HBoxContainer" instance=ExtResource("4_mhakd")]
layout_mode = 2

[node name="CRT-Filter" type="Label" parent="Control/Video/VBoxContainer"]
layout_mode = 2
text = "CRT-filter"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/Video/VBoxContainer"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="Control/Video/VBoxContainer/HBoxContainer2"]
layout_mode = 2
flat = true

[node name="Label" type="Label" parent="Control/Video/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Enabled"

[node name="Result" type="Control" parent="Control/Video/VBoxContainer"]
custom_minimum_size = Vector2(100, 18)
layout_mode = 2

[node name="Cancel" type="Button" parent="Control/Video/VBoxContainer/Result"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -7.0
offset_right = 41.0
offset_bottom = 7.0
grow_vertical = 2
text = "Cancel"

[node name="Save" type="Button" parent="Control/Video/VBoxContainer/Result"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -7.0
offset_bottom = 7.0
grow_horizontal = 0
grow_vertical = 2
text = "Save"

[node name="CustomFaceSelector" type="PanelContainer" parent="Control"]
visible = false
custom_minimum_size = Vector2(168, 252)
layout_mode = 0
offset_left = 410.0
offset_top = 44.0
offset_right = 578.0
offset_bottom = 296.0
script = ExtResource("8_gaijy")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CustomFaceSelector"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/CustomFaceSelector/VBoxContainer"]
layout_mode = 2
text = "24/24"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Control/CustomFaceSelector/VBoxContainer"]
custom_minimum_size = Vector2(152, 200)
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CustomFaceSelector/VBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="Save_Cancel" type="Control" parent="Control/CustomFaceSelector/VBoxContainer"]
custom_minimum_size = Vector2(146, 16)
layout_mode = 2

[node name="Cancel" type="Button" parent="Control/CustomFaceSelector/VBoxContainer/Save_Cancel"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 1
offset_right = 41.0
offset_bottom = 14.0
size_flags_horizontal = 8
text = "Cancel"

[node name="Save" type="Button" parent="Control/CustomFaceSelector/VBoxContainer/Save_Cancel"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -31.0
offset_bottom = 14.0
grow_horizontal = 0
size_flags_horizontal = 8
text = "Save"

[node name="FaceCustom" parent="Control" instance=ExtResource("3_gloqi")]
visible = false
layout_mode = 1
offset_left = 140.0
offset_top = 160.0
offset_right = -241.0
offset_bottom = -61.0

[node name="PlayerInputSettings" parent="Control" node_paths=PackedStringArray("player_input_selector") instance=ExtResource("10_ccaiu")]
visible = false
layout_mode = 0
offset_left = 303.0
offset_top = 90.0
offset_right = 523.0
offset_bottom = 276.0
player_input_selector = NodePath("../PlayerInputSelector")

[node name="PlayerInputSelector" type="PanelContainer" parent="Control" node_paths=PackedStringArray("list_root", "player_input_customizer_interface")]
visible = false
custom_minimum_size = Vector2(183, 242)
layout_mode = 0
offset_left = 336.0
offset_top = 48.0
offset_right = 519.0
offset_bottom = 290.0
script = ExtResource("10_hl4et")
list_root = NodePath("VBoxContainer/ScrollContainer/VBoxContainer")
player_input_customizer_interface = NodePath("../PlayerInputSettings")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PlayerInputSelector"]
layout_mode = 2

[node name="Spacer" type="Control" parent="Control/PlayerInputSelector/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Control/PlayerInputSelector/VBoxContainer"]
custom_minimum_size = Vector2(152, 200)
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PlayerInputSelector/VBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="Save_Cancel" type="Control" parent="Control/PlayerInputSelector/VBoxContainer"]
custom_minimum_size = Vector2(146, 16)
layout_mode = 2

[node name="Cancel" type="Button" parent="Control/PlayerInputSelector/VBoxContainer/Save_Cancel"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 1
offset_right = 41.0
offset_bottom = 14.0
size_flags_horizontal = 8
text = "Cancel"

[node name="Save" type="Button" parent="Control/PlayerInputSelector/VBoxContainer/Save_Cancel"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -31.0
offset_bottom = 14.0
grow_horizontal = 0
size_flags_horizontal = 8
text = "Save"

[node name="Background" parent="." instance=ExtResource("3_rdeqp")]

[node name="CanvasLayer" parent="." instance=ExtResource("4_b2kv2")]

[connection signal="pressed" from="Control/Main/CenterContainer/VBoxContainer/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="Control/Main/CenterContainer/VBoxContainer/Video" to="." method="_on_video_pressed"]
[connection signal="pressed" from="Control/Main/CenterContainer/VBoxContainer/Customize" to="." method="_on_customize_pressed"]
[connection signal="pressed" from="Control/Main/CenterContainer/VBoxContainer/Input" to="." method="_on_input_pressed"]
[connection signal="pressed" from="Control/Main/CenterContainer/VBoxContainer/Cancel" to="Control/Main" method="_on_cancel_pressed"]
[connection signal="pressed" from="Control/Main/CenterContainer/VBoxContainer/Save" to="Control/Main" method="_on_save_pressed"]
[connection signal="cancel" from="Control/Audio" to="." method="_on_cancel_pressed"]
[connection signal="drag_ended" from="Control/Audio/VBoxContainer/MasterSlider" to="Control/Audio" method="_on_master_slider_drag_ended"]
[connection signal="value_changed" from="Control/Audio/VBoxContainer/MasterSlider" to="Control/Audio" method="_on_master_slider_value_changed"]
[connection signal="drag_ended" from="Control/Audio/VBoxContainer/MusicSlider" to="Control/Audio" method="_on_music_slider_drag_ended"]
[connection signal="value_changed" from="Control/Audio/VBoxContainer/MusicSlider" to="Control/Audio" method="_on_music_slider_value_changed"]
[connection signal="drag_ended" from="Control/Audio/VBoxContainer/SFXSLider" to="Control/Audio" method="_on_sfxs_lider_drag_ended"]
[connection signal="value_changed" from="Control/Audio/VBoxContainer/SFXSLider" to="Control/Audio" method="_on_sfxs_lider_value_changed"]
[connection signal="pressed" from="Control/Audio/VBoxContainer/Result/Cancel" to="Control/Audio" method="_on_cancel_pressed"]
[connection signal="pressed" from="Control/Audio/VBoxContainer/Result/Save" to="Control/Audio" method="_on_save_pressed"]
[connection signal="cancel" from="Control/Video" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Control/Video/VBoxContainer/HBoxContainer/Dec" to="Control/Video" method="_on_dec_pressed"]
[connection signal="pressed" from="Control/Video/VBoxContainer/HBoxContainer/Inc" to="Control/Video" method="_on_inc_pressed"]
[connection signal="pressed" from="Control/Video/VBoxContainer/Result/Cancel" to="Control/Video" method="_on_cancel_pressed"]
[connection signal="pressed" from="Control/Video/VBoxContainer/Result/Save" to="Control/Video" method="_on_save_pressed"]
[connection signal="cancel" from="Control/CustomFaceSelector" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Control/CustomFaceSelector/VBoxContainer/Save_Cancel/Cancel" to="Control/CustomFaceSelector" method="_on_cancel_pressed"]
[connection signal="pressed" from="Control/CustomFaceSelector/VBoxContainer/Save_Cancel/Save" to="Control/CustomFaceSelector" method="_on_save_pressed"]
[connection signal="cancel" from="Control/PlayerInputSelector" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Control/PlayerInputSelector/VBoxContainer/Save_Cancel/Cancel" to="Control/PlayerInputSelector" method="_on_cancel_pressed"]
[connection signal="pressed" from="Control/PlayerInputSelector/VBoxContainer/Save_Cancel/Save" to="Control/PlayerInputSelector" method="_on_save_pressed"]
